# https://github.com/pypa/sampleproject/blob/main/pyproject.toml
[project]
name = "juseong-fake-sensors"
version = "0.0.1"
authors = [
    {name = "Bryan \"Beege\" Berry", email = "bryanberry235711@gmail.com"},
]
description = "Fake Sensors for Juseong"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["IoT", "testing", "education", "local development"]
license = {text = "MIT"}
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi~=0.95.1",
    "uvicorn[standard]~=0.22.0"
]

[project.urls]  # Optional
"Homepage" = "https://github.com/TheBeege/juseong-fake-sensors"
"Bug Reports" = "https://github.com/TheBeege/juseong-fake-sensors/issues"
"Source" = "https://github.com/TheBeege/juseong-fake-sensors"

[project.scripts]
fake_sensors = "fake_sensors.main:main"

[build-system]
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
requires = ["setuptools>=58.0", "wheel"]
build-backend = "setuptools.build_meta"